【修正】jacoco修正,新增模块