@@ -14,6 +14,7 @@
         <module>arktouros-apm</module>
         <module>arktouros-protocol</module>
         <module>arktouros-webapp</module>
+        <module>arktouros-jacoco-aggregation</module>
     </modules>
 
     <packaging>pom</packaging>
@@ -85,8 +86,11 @@
         <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
         <testFailureIgnore>true</testFailureIgnore>
         <skipUTs>false</skipUTs>
-        <jacoco.dataFile>${project.build.directory}/jacoco.exec</jacoco.dataFile>
-        <jacoco.output.dir>${project.basedir}/jacoco</jacoco.output.dir>
+<!--        <jacoco.dataFile>${project.build.directory}/jacoco.exec</jacoco.dataFile>-->
+<!--        <jacoco.output.dir>${project.basedir}/jacoco</jacoco.output.dir>-->
+        <sonar.coverage.jacoco.xmlReportPaths>
+            ${project.basedir}/arktouros-jacoco-aggregation/target/site/jacoco-aggregate/jacoco.xml
+        </sonar.coverage.jacoco.xmlReportPaths>
         <!-- UT -->
 
         <delombok.output.dir>${project.build.directory}/delombok</delombok.output.dir>
@@ -288,6 +292,26 @@
                     <artifactId>frontend-maven-plugin</artifactId>
                     <version>${front-end-maven-plugin.version}</version>
                 </plugin>
+
+                <!-- UT -->
+                <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>${jacoco-maven-plugin.version}</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${maven-surefire-plugin.version}</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${maven-surefire-plugin.version}</version>
+                </plugin>
+                <!-- UT -->
             </plugins>
         </pluginManagement>
 
@@ -363,64 +387,6 @@
                         <version>${lombok.version}</version>
                     </dependency>
                 </dependencies>
-            </plugin>
-
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${jacoco-maven-plugin.version}</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <!--first execution: for preparing JaCoCo runtime agent-->
-                            <goal>prepare-agent</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>report</id>
-                        <phase>test</phase>
-                        <goals>
-                            <!--second execution: for creating code coverage reports-->
-                            <goal>report</goal>
-                        </goals>
-                        <configuration>
-                            <dataFile>${jacoco.dataFile}</dataFile>
-<!--                            <outputDirectory>${jacoco.output.dir}</outputDirectory>-->
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven-surefire-plugin.version}</version>
-                <configuration>
-                    <testFailureIgnore>${testFailureIgnore}</testFailureIgnore>
-                    <skip>${skipUTs}</skip>
-                    <!-- 使用@argLine引入参数 否则冲突 -->
-                    <argLine>
-                        @{argLine} --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED
-                    </argLine>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>${maven-surefire-plugin.version}</version>
-                <configuration>
-                    <argLine>
-                        @{argLine} --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED
-                    </argLine>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>integration-test</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
 
             <plugin>
